align and compact solve message

--- a/static/404.css
+++ b/static/404.css
@@ -26,14 +26,12 @@ div.not-found {
     margin: 10px 0;
     display: block;
 }
-    div.main-game-body {
-      margin: 2em;
-      margin-left: 10em;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-    }
+div.main-game-body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
 @media (max-width: 799px) and (orientation: portrait) {
      div.main-game-body {
          display: none;
@@ -49,11 +47,13 @@ div.not-found {
       background: var(--invalid-queen);
       border: 1px solid #800000;
       border-radius: 20px;
-      padding: 2.2em;
+      padding: 1.5em 1em;
       margin: 1em;
       margin-top: 10px;
       font-size: 18px;
       font-weight: bold;
+      max-width: 600px;
+      text-align: center;
     }
 
     #counter {
